# optimization-for-exemplification

./: README.md  derivative_test.ipynb  exemplify.ipynb  exemplify_stat.ipynb  pyproject.toml  signal_temporal_logic-0.2.1-cp37-cp37m-linux_x86_64.whl
src/: exemplify.py  signal_processing.py  specification.py
