[project]
name = "optimization-for-exemplification"
description = ""
version = "0.0.1"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
    "numpy",
    "scipy",
    "cmaes",
    "signal-temporal-logic @ git+https://github.com/ERATOMMSD/signal-temporal-logic"
]
